k8s/yande/emptydir.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: alpine
spec:
  containers:
  - name: alpine1
    image: alpine
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh","-c","sleep 3600"]
    volumeMounts:
    - mountPath: /cache
      name: test-emptydir
  - name: alpine2
    image: alpine
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh","-c","sleep 3600"]
    volumeMounts:
    - mountPath: /cache
      name: test-emptydir
  volumes: 
  - name: test-emptydir
    emptyDir:
         sizeLimit: 200Mi
