k8s/yande/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "nginx"  # 指定 Ingress Controller 的类型
	#  nginx.ingress.kubernetes.io/use-regex: "true"    # 指定我们的 rules 的 path 可以使用正则表达式
    #  nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"    # 连接超时时间，默认为 5s
    #  nginx.ingress.kubernetes.io/proxy-send-timeout: "600"      # 后端服务器回转数据超时时间，默认为 60s
    #  nginx.ingress.kubernetes.io/proxy-send-timeout: "600"      # 后端服务器响应超时时间，默认为 60s
    #  nginx.ingress.kubernetes.io/proxy-body-size: "10m"         # 客户端上传文件，最大大小，默认为 20m
spec:
  rules:
  - host: yy.nn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
